
  [ Faidon Liambotis ]
  * Refer to /usr/share/common-licenses/GPL-2 instead of GPL. The code is
    -for now- GPLv2-only and in light of GPLv3, pointing to GPL is misleading.
  * Add ast_key_dir patch to move keys from /var/lib/asterisk/keys to
    /usr/share/asterisk/keys where they should be.
  * Actually ship keys, including Junction Networks' by fixing pubkey_jnctn
    patch.
  * Handle space/newline-delimited directories on /etc/asterisk when doing
    chmod on postinst.
  * Switch to quilt as a patch management system instead of dpatch.
  * Split bristuff 0.4.0-test3 into individual patches and add it to the quilt
    patchset.
  * Use libpri-bristuffed.so.1 and its respective header
    (use-libpri-bristuffed).
  * Ship xagi-test.c (from bristuff) to examples.

  [ Kilian Krause ]
  * backports/etch: replace libsnmp10-dev with libsnmp9-dev

 -- Faidon Liambotis <paravoid@debian.org>  Mon, 06 Aug 2007 05:33:10 +0300

asterisk (1:1.4.9~dfsg-1) unstable; urgency=high

  [ Tzafrir Cohen ]
  * New upstream release.
    - ASA-2007-018 - DoS Resource Exhaustion vulnerability in IAX2

  [ Faidon Liambotis ]
  * Add myself to Uploaders.
  * Fix "debian/rules clean" to cleanup correctly the tree by calling "make
    distclean" instead of "make clean". Also, fix some stuff in the upstream
    Makefiles (debian/patches/make-clean-fixes). Fixes a lintian warning.
  * Add XS-Vcs-Svn and XS-Vcs-Browser to debian/control.
  * Move examples from all packages (debian/examples) to asterisk-config only.
  * Add eagi-test.c, eagi-sphinx-test.c, fastagi-test and static-http to
    examples.
  * Remove Conflicts/Replaces/Depends to pre-sarge versions, they're useless
    even for backports.

  [ Mark Purcell ]
  * Include asterisk.init changes from Martin
    - Asterisk does not create /var/run/asterisk directory if not existent
    (Closes: #413541)
  * Backout asterisk-h323 Suggests:/ Recommends: asterisk-oh323. The former
    works, the latter does not with asterisk-1.4.x