@@ -1,0 +1,1 @@
+asterisk-config: non-standard-file-perm
