@@ -13,9 +13,17 @@ set -e
 
 case "$1" in
     configure)
-	if [ -x /usr/share/asterisk/bin/asterisk_fix ]; then
-		/usr/share/asterisk/bin/asterisk_fix
-	fi
+        set +e # ignore errors temporarily
+
+	# find conffiles under /etc/asterisk belonging to asterisk-config
+	# and chown them to user asterisk.
+	dpkg-query -W -f='${Conffiles}\n' asterisk-config 2>/dev/null | \
+	  sed -nr -e 's; (/etc/asterisk/.*) [0-9a-f]*;\1;p' | \
+	while read conffile; do
+		chown asterisk: ${conffile} 2>/dev/null
+	done
+
+	set -e
     ;;
 
     abort-upgrade|abort-remove|abort-deconfigure)
