@@ -2,4 +2,3 @@ usr/lib/asterisk
 usr/sbin
 usr/share/asterisk/firmware
 usr/share/asterisk/keys
-../asterisk_fix usr/share/asterisk/bin
