@@ -106,7 +106,6 @@ Description: Web-based (CGI) voice mail interface for Asterisk
 
 Package: asterisk-config
 Recommends: asterisk
-Depends: adduser (>= 3.63)
 Conflicts: asterisk-config-custom
 Architecture: all
 Section: comm
