@@ -140,8 +140,6 @@ install-arch: build-arch
 
 	dh_install -s --sourcedir=debian/tmp
 
-	chmod +x $(CURDIR)/debian/asterisk/usr/share/asterisk/bin/asterisk_fix
-
 	$(RM) -f $(CURDIR)/debian/asterisk/usr/sbin/{stereorize,streamplayer}
 	touch $@
 
@@ -156,6 +154,9 @@ install-indep: build-indep
 
 	dh_install -i --sourcedir=debian/tmp
 
+	install -m 0644 -D $(CURDIR)/debian/asterisk-config.lintian-overrides \
+		$(CURDIR)/debian/asterisk-config/usr/share/lintian/overrides/asterisk-config
+	
 	chmod +x $(CURDIR)/debian/asterisk-web-vmail/usr/lib/cgi-bin/asterisk/vmail.cgi
 	
 	
@@ -171,6 +172,9 @@ binary-indep: install-indep
 	dh_link -i 
 	dh_compress -i
 	dh_fixperms -i
+	# should follow dh_fixperms; asterisk configurations may contain
+	# sensitive information, such as passwords
+	chmod o-rwx $(CURDIR)/debian/asterisk-config/etc/asterisk/*
 	dh_installdeb -i
 	dh_gencontrol -i
 	dh_md5sums -i
