@@ -14,8 +14,17 @@ asterisk (1:1.4.9~dfsg-2) UNRELEASED; urgency=low
     /usr/share/asterisk/keys where they should be.
   * Actually ship keys, including Junction Networks' by fixing pubkey_jnctn
     patch.
-  * Handle space/newline-delimited directories on /etc/asterisk when doing
-    chmod on postinst.
+  * Major overhaul of the postinst scripts, completely replacing asterisk_fix.
+    - Create Asterisk's directories on asterisk.dirs to track them using dpkg.
+    - Add asterisk.postinst which calls adduser, chown, chmod. Improve error
+      handling.
+    - Don't do unnecessary stuff on asterisk-config postinst.
+    - chmod /etc/asterisk on build-time to allow the user to modify the
+      permissions; this required a lintian override.
+    - Honor dpkg-statoverride on all the chowned/chmoded directories.
+    - Handle asterisk-config -> asterisk installation order properly
+      (Closes: #408708)
+    - Don't depend on adduser from asterisk-config.
   * Switch to quilt as a patch management system instead of dpatch.
   * Split bristuff 0.4.0-test3 into individual patches and add it to the quilt
     patchset.
@@ -26,7 +35,7 @@ asterisk (1:1.4.9~dfsg-2) UNRELEASED; urgency=low
   [ Kilian Krause ]
   * backports/etch: replace libsnmp10-dev with libsnmp9-dev
 
- -- Faidon Liambotis <paravoid@debian.org>  Mon, 06 Aug 2007 05:33:10 +0300
+ -- Faidon Liambotis <paravoid@debian.org>  Mon, 06 Aug 2007 09:24:07 +0300
 
 asterisk (1:1.4.9~dfsg-1) unstable; urgency=high
 
